# LexClara

./: .gitattributes  .gitignore  LICENSE  LexClara_16_corre_chatbot.ipynb  README.md  app.py  appy.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/gold/: linguagem-clara-2020-2024_2.csv
lexclaraDB/ChromaDB/: chroma.sqlite3
lexclaraDB/ChromaDB/029c2cdf-bcfb-4944-a17c-bad79db78e8c/: index_metadata.pickle
lexclaraDB/ChromaDB/a54446af-2d23-4068-bd08-a986174262ae/: index_metadata.pickle
